# USCIS-notifier

./: .gitignore  Cargo.toml  README.md  index.js  utils.js
.github/workflows/: rust.yml
backend/: data.json  package-lock.json  package.json
backend/public/: index.html
backend/src-tauri/: tauri.conf.json
backend/src-tauri/src/: main.rs
client/: package-lock.json  package.json
client/src/: App.js  Buttons.js  Buttons.scss  Table.js  Table.scss  data.js  index.js  styles.scss  utils.js
js/: package-lock.json  package.json  start.bat
src/: json.rs  lib.rs  main.rs  notify.rs
