[package]
name = "uscis-notifier"
version = "0.1.0"
authors = ["RogueArt <altoraries@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
select = "0.5.0"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4"